--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Timmy Truong # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First year student at the University of Virginia 
+  First year student at the University of Virginia. Pursuing a B.A in Computer Science and B.A in Commerce 
   <br><br>
   TLT9EP@virginia.edu  
   <br><br>
